--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <main id="main">
     <section>
         <h1>Conteudo</h1>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        <p class="logomarca">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
