--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <header id="header">    
     <div>
         <div>
-            <div><a href="" class="logomarca">Logomarca</a></div>            
+            <div><a href="" class="logomarca">Logomarca</a></div>   
+            <input type="text"> 
+            <button type="submit">Enviar</button>        
         </div>        
     </div>    
 </header>
