--- a/index.html
+++ b/index.html
@@ -1,40 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">        
-    <title>course_html5</title>        
-    <link rel="stylesheet" href="/css/styles.css">       
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/buttons.css">
 </head>
 <body>
-<header id="header">    
-    <div>
-        <div>
-            <div><a href="" class="logomarca">Logomarca</a></div>   
-            <input type="text"> 
-            <button type="submit">Enviar</button>        
-        </div>        
-    </div>    
-</header>
-<main id="main">
-    <section>
-        <h1>Conteudo</h1>
-        <p class="logomarca">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, 
-            sunt in culpa qui officia deserunt mollit anim id est laborum."
-        </p>
-    </section>
-</main>
-    
-<footer id="footer">
-    <p class="logomarca">&copy; Todos os Direitos Reservados</p>
-</footer>
-
+    <a href=""class="btn btn-red">item 1</a>
+    <a href=""class="btn btn-blue">item 2</a>
+    <a href=""class="btn btn-green">item 3</a>
+    <a href=""class="btn">item 4</a>
 </body>
 </html>
