--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">    
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    <a href=""class="btn btn-red">item 1</a>
-    <a href=""class="btn btn-blue">item 2</a>
-    <a href=""class="btn btn-green">item 3</a>
-    <a href=""class="btn">item 4</a>
+    <div>
+        <a href="" class="btn btn-red">item 1</a>
+        <a href="" class="btn btn-blue">item 2</a>
+        <a href="" class="btn btn-green">item 3</a>
+        <a href="" class="btn">item 4</a>
+    </div>
+    <div class=box>
+        Quadrado
+    </div>
 </body>
+
 </html>
