--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
     <div class=box>
         Quadrado
     </div>
+    <div id="display">
+        <div>Div</div> <a href="">Link</a>
+    </div>
+    <div>
+        <table border="1">
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
