--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
 
 <body>
     <div>
-        <a href="" class="btn btn-red">item 1</a>
-        <a href="" class="btn btn-blue">item 2</a>
-        <a href="" class="btn btn-green">item 3</a>
-        <a href="" class="btn">item 4</a>
+        <nav class='vertical'>
+            <ul>
+                <li><a href="" class="btn btn-blue">Item 1</a></li>
+                <li><a href="" class="btn btn-red">Item 2</a></li>
+                <li><a href="">Item 3</a></li>
+                <li><a href="">Item 4</a></li>
+                <li><a href="">Item 5</a></li>
+            </ul>
+        </nav>
+
     </div>
-    <div class=box>
-        Quadrado
-    </div>
-    <div id="display">
-        <div>Div</div> <a href="">Link</a>
-    </div>
+
     <div>
-        <table border="1">
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>2</td>
-                </tr>
-            </tbody>
-        </table>
+        <nav class="horizontal">
+            <ul>
+                <li><a href="">Item 1</a></li>
+                <li><a href="">Item 2</a></li>
+                <li><a href="">Item 3</a></li>
+                <li><a href="">Item 4</a></li>
+                <li><a href="">Item 5</a></li>
+            </ul>
+        </nav>
+
     </div>
+
+
 </body>
 
 </html>
